25.1.5 (21-10-2019)
- Bug Fix: In order to initialize correctly, invoke constructor instead of invoking new

25.1.4 (18-10-2019)
25.1.3 (18-10-2019)
- Improvement: added otherLevel slot to Qualification
- Improvement: Allow migrate physical addresses without check rules

25.1.2 (17-10-2019)
- Bug Fix: added missing error message for duplicated student curricular plan
- Improvement: removed possibility to manage professorships by course responsible teacher

25.1.1 (26-09-2019)
- Bug Fix: on view sent emails, filter inconsistent ExecutionCourseSenders

25.1.0 (25-09-2019)
- New Feature: Profile based access control
- Bug Fix: when sending emails, clean colon characters from senders name

25.0.1 (20-09-2019)
- Bug Fix: Require and validate email in account creation, in Manager Portal

25.0.0 (20-09-2019)
- Refactor: degree structure code cleanup
- Refactor: enrolment and enrolment evaluation code cleanup
- Refactor: registration constructors code cleanup
- Refactor: changed ExecutionCourse domain relation from ExecutionSemester to ExecutionInterval
- Refactor: changed Context domain relations from ExecutionSemester to ExecutionInterval
- Refactor: changed CompetenceCourseInformation and CompetenceCourseInformationChangeRequest domain relations from ExecutionSemester to ExecutionInterval
- Refactor: changed CurricularRule domain relations from ExecutionSemester to ExecutionInterval
- Refactor: changed SchoolClass domain relation from ExecutionSemester to ExecutionInterval
- Refactor: changed EnrolmentInstructions domain relation from ExecutionSemester to ExecutionInterval

24.2.1 (18-09-2019)
- Improvement: Add institutional email column to students excel on teacher's perspective

24.2.0 (12-09-2019)
- Improvement: Person and ExecutionCourse senders name calculated dynamically
- Improvement: StudentGroup now supports active Registrations for ExecutionYear

24.1.1 (12-08-2019)