@@ -1,3 +1,5 @@
+- Refactor: Split Registration in two, one to import Registration without the assurance of valid fiscal data, and other which assure fiscal data is valid and customer is created
+
 25.1.5 (21-10-2019)
 - Bug Fix: In order to initialize correctly, invoke constructor instead of invoking new
 
